# GPUZIP

./: .gitmodules  README.md
Compressor/include/: compressor.hpp  compressor_cuszp.hpp  compressor_nvcomp_bitcomp.hpp  compressor_zfp.hpp  cuda_utils.cuh
GPUZIPy/: CMakeLists.txt  dockerfile.gpuzipy  setup.py
GPUZIPy/csrc/: gpuzipy.cpp
GPUZIPy/example/: main.py
Prefetch/include/: Prefetch.cuh  cudaUtils.cuh  structs.h
Prefetch/include/chkptOnly/: CheckpointOnly.cuh
Prefetch/include/revolve/: RevolvePrefetch.cuh
docs/: CppCudaExamples.md  InstallingCuZFP.md  PythonExamples.md
src/Compressor/: cuda_utils.cu
src/Compressor/include/: Compressor.hpp  CompressorBitcomp.hpp  CompressorCuSZp.hpp  CompressorZFP.hpp  cuda_utils.hpp
src/Prefetch/include/cache/: GPUCheckpointCache.cuh  GPUCheckpointCacheMemento.cuh
src/Prefetch/include/checkpointing/: Checkpointing.hpp
src/Prefetch/include/checkpointing/revolve/: RevolveCheckpointing.cpp  revolve.c  revolve.h
src/Prefetch/include/checkpointing/trace/: TraceCheckpointing.cpp
src/Prefetch/include/checkpointing/uniform/: UniformCheckpointing.cpp
src/Prefetch/include/common/: GPUZIPBuilders.cpp  GPUZIPConfig.h  GPUZIPLogger.cpp  cudaUtils.cuh  real_t.h  structs.h
src/Prefetch/include/prefetch/: CheckpointOnly.cuh  Prefetch.cuh
standalone-example/: CMakeLists.txt  README.md  config.cfg  config_reader.hpp  kernels.cuh  main.cu
